syntax = "proto3";

option csharp_namespace = "Networking.Messages";


message protobufMessage {
  oneof command {
    //exampleMessage exampleMessage = 100;
    nodeInfo nodeInfo = 1;
    nodeInfoReply nodeInfoReply = 2;

    nodePayload nodePayload = 101;
    share share = 102;
  }
}
message nodeInfo {
    int32 Id = 1;
    string Name = 2;
}
message nodeInfoReply {
    int32 Id = 1;
    string Name = 2;
}

message nodePayload {
  string Payload = 1;
}

message share {
  string X = 1;
  string Y = 2;
}

message exampleMessage {
    string message = 1;
}